Исправления по результатам проверки автотестов